# pythagoras

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  commands.c  config.mk  configure.ac  ideas.txt  prompt.c  pythagoras.c  pythagoras.h
